--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,70 @@
-.row-header {
-    margin: 0px auto;
-    padding: 0px auto;
+@lt-gray: #ddd;
+@background-dark: #512DA8;
+@background-light: #9575CD;
+@background-pale: #D1C4E9;
+
+// Height variables
+@carousel-item-height: 300px;
+
+.zero-margin (@pad-up-dn: 0px, @pad-left-right: 0px) {
+	margin:0px auto;
+    padding: @pad-up-dn @pad-left-right;
 }
-.row-content {
-    margin: 0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height: 400px;
+.row-header{
+    .zero-margin();
 }
 
-.footer {
-    background-color: #D1C4E9;
-    margin: 0px auto;
-    padding: 20px 0px 20px 0px;
+.row-content {
+    .zero-margin(50px,0px);
+    border-bottom: 1px ridge;
+    min-height:400px;
+}
+
+.footer{
+    background-color: @background-pale;
+    .zero-margin(20px, 0px);
 }
 
 .jumbotron {
-    padding: 70px 30px 70px 30px;
-    margin: 0px auto;
-    background: #9575CD;
-    color: floralwhite;
+    .zero-margin(70px,30px);
+    background: @background-light ;
+    color:floralwhite;
 }
 
-.address {
-    font-size: 80%;
-    margin: 0px;
-    color: #0f0f0f;
+address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
 }
-body {
-    padding: 50px 0px 0px 0px;
-    z-index: 0;
+
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
 }
+
 .navbar-dark {
-    background-color: #512DA8
+     background-color: @background-dark;
 }
+
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    border-left: 1px solid @lt-gray;
+    border-right: 1px solid @lt-gray;
+    border-bottom: 1px solid @lt-gray;
     padding: 10px;
 }
+
 .carousel {
-    background:#512DA8;
-}
+    background:@background-dark;
 
-.carousel-item {
-  height: 300px;
-}
-
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+    .carousel-item {
+        height: @carousel-item-height;
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-height: 300px;
+        }
+    }
 }
 
 #carouselButton {
