--- a/css/styles.css
+++ b/css/styles.css
@@ -1,75 +1,57 @@
-@lt-gray: #ddd;
-@background-dark: #512DA8;
-@background-light: #9575CD;
-@background-pale: #D1C4E9;
-
-// Height variables
-@carousel-item-height: 300px;
-
-.zero-margin (@pad-up-dn: 0px, @pad-left-right: 0px) {
-	margin:0px auto;
-    padding: @pad-up-dn @pad-left-right;
+.row-header {
+  margin: 0px auto;
+  padding: 0px 0px;
 }
-.row-header{
-    .zero-margin();
-}
-
 .row-content {
-    .zero-margin(50px,0px);
-    border-bottom: 1px ridge;
-    min-height:400px;
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
-
-.footer{
-    background-color: @background-pale;
-    .zero-margin(20px, 0px);
+.footer {
+  background-color: #D1C4E9;
+  margin: 0px auto;
+  padding: 20px 0px;
 }
-
 .jumbotron {
-    .zero-margin(70px,30px);
-    background: @background-light ;
-    color:floralwhite;
+  margin: 0px auto;
+  padding: 70px 30px;
+  background: #9575CD;
+  color: floralwhite;
 }
-
-address{
-    font-size:80%;
-    margin:0px;
-    color:#0f0f0f;
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
-
-body{
-    padding:50px 0px 0px 0px;
-    z-index:0;
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0;
 }
-
 .navbar-dark {
-     background-color: @background-dark;
+  background-color: #512DA8;
 }
-
 .tab-content {
-    border-left: 1px solid @lt-gray;
-    border-right: 1px solid @lt-gray;
-    border-bottom: 1px solid @lt-gray;
-    padding: 10px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
 }
-
 .carousel {
-    background:@background-dark;
-
-    .carousel-item {
-        height: @carousel-item-height;
-        img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            min-height: 300px;
-        }
-    }
+  background: #512DA8;
 }
-
+.carousel .carousel-item {
+  height: 300px;
+}
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+}
 #carouselButton {
-    right:0px;
-    position: absolute;
-    bottom: 0px;
-    z-index: 1;
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
 }
