NPM scripts part-1

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,15 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+
+.modal .modal-header {
+  background-color: #512DA8;
+  color: floralwhite;
+}
+.modal .modal-content {
+  background-color: #D1C4E9;
+}
+.close {
+  color: floralwhite;
+}
+
