--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+:root {
+  --lt-gray: #ddd;
+  --background-dark: #512DA8;
+  --background-light: #9575CD;
+  --background-pale: #D1C4E9;
+
+  /* Height variables */
+  --carousel-item-height: 300px;
+}
+
+
 .row-header {
   margin: 0px auto;
   padding: 0px 0px;
@@ -74,4 +85,146 @@ body {
 .close {
   color: floralwhite;
 }
+
+
+@mixin zero-margin($pad-up-dn, $pad-left-right) {
+	margin:0px auto;
+	padding: $pad-up-dn $pad-left-right;
+}
+.row-header{
+    @include zero-margin(0px,0px);
+}
+
+.row-content {
+    @include zero-margin(50px,0px);
+    border-bottom: 1px ridge;
+    min-height:400px;
+}
+
+.footer{
+    background-color: var(--background-pale);
+    @include zero-margin(20px, 0px);
+}
+
+.jumbotron {
+    @include zero-margin(70px,30px);
+    background: var(--background-light);
+    color:floralwhite;
+}
+
+address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
+}
+
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: var(--background-dark);
+}
+
+.tab-content {
+    border-left: 1px solid var(--lt-gray);
+    border-right: 1px solid var(--lt-gray);
+    border-bottom: 1px solid var(--lt-gray);
+    padding: 10px;
+}
+
+.carousel {
+    background:var(--background-dark);
+    .carousel-item {
+        height: var(--carousel-item-height);
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-height: 300px;
+        }
+    }
+}
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
+
+
+@mixin zero-margin($pad-up-dn: 0px, $pad-left-right: 0px) {
+	margin:0px auto;
+  padding: $pad-up-dn $pad-left-right;
+}
+
+.row-header{
+  @include zero-margin();
+}
+
+.row-content {
+    @include zero-margin(50px,0px);
+    border-bottom: 1px ridge;
+    min-height:400px;
+}
+
+.footer{
+    background-color: var(--background-pale);
+    @include zero-margin(20px, 0px);
+}
+
+.jumbotron {
+    @include zero-margin(70px,30px);
+    background: var(--background-light) ;
+    color:floralwhite;
+}
+
+address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
+}
+
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: var(--background-dark);
+}
+
+.tab-content {
+    border-left: 1px solid var(--lt-gray);
+    border-right: 1px solid var(--lt-gray);
+    border-bottom: 1px solid var(--lt-gray);
+    padding: 10px;
+}
+
+.carousel {
+    background:var(--background-dark);
+
+    .carousel-item {
+        height: var(--carousel-item-height);
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-height: 300px;
+        }
+    }
+}
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
+
+.modal .modal-header {
+    background-color: var(--background-dark);
+  }
 
